# azure-rag-examples

./: README.md  azure-rag-architecture.drawio  helper  pyproject.toml
functions/: ingest_handler.py  response_handler.py
iac/: apim.bicep  azureFunctionHighPriority.bicep  azureFunctionLowPriority.bicep  eventGrid.bicep  main.bicep  openai.bicep  parameters.json  redis.bicep  serviceBus.bicep
iac/api/: apim-backend.bicep  apim-main.bicep  apim-policy.xml  apim-subscription.bicep  apim-utils.bicep  apim.bicep  apipm-api.bicep
iac/api/open_api_definition/: handler-schema-dev.json  handler-schema-prod.json  openai-schema-dev.json  openai-schema-prod.json
iac/events/: eventGrid.bicep  redis.bicep  serviceBus.bicep
iac/functions/: azureFunctionHighPriority.bicep  azureFunctionLowPriority.bicep
iac/knowledge_base/: blobStorage.bicep  cognitiveSearch.bicep  cosmosDb.bicep
iac/utils/: openai.bicep  redis.bicep
